--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="max-w-screen-2xl mx-auto px-6 h-24 flex justify-between items-center">
             <!-- Logo Area -->
             <a href="#" onclick="showPage('home')" class="font-serif text-3xl text-teal tracking-tight hover:opacity-80 transition-opacity flex items-center gap-3">
-                <img src="images/logo.png" alt="" class="h-10 w-auto hidden" onerror="this.style.display='none'"> 
+                <img src="images/logo.png" alt="CoCrea8 Logo" class="h-10 w-auto"> 
                 <span>CoCrea8</span>
             </a>
 
