--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@
     <header class="fixed w-full top-0 z-50 bg-[#F9F9F7]/95 backdrop-blur-sm border-b border-stone">
         <div class="max-w-screen-2xl mx-auto px-6 h-24 flex justify-between items-center">
             <!-- Logo Area -->
-            <a href="#" onclick="showPage('home')" class="font-serif text-3xl text-teal tracking-tight hover:opacity-80 transition-opacity flex items-center gap-3">
-                <img src="images/logo.png" alt="CoCrea8 Logo" class="h-10 w-auto"> 
-                <span>CoCrea8</span>
+            <a href="#" onclick="showPage('home')" class="hover:opacity-80 transition-opacity flex items-center">
+                <img src="images/logo.png" alt="CoCrea8 Logo" class="h-14 w-auto"> 
             </a>
 
             <!-- Desktop Nav -->
