--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <!-- Logo Area -->
             <a href="#" onclick="showPage('home')" class="hover:opacity-80 transition-opacity flex items-center gap-3">
                 <!-- UPDATED: Now looking for logo.jpg instead of logo.png -->
-                <img src="images/logo.jpg" alt="CoCrea8 Logo" class="h-14 w-auto"> 
+                <img src="images/logo.jpg" alt="CoCrea8 Logo" class="h-20 w-auto"> 
             </a>
 
             <!-- Desktop Nav -->
@@ -745,6 +745,10 @@
                                     <span class="w-1.5 h-1.5 bg-rose rounded-full mr-3 opacity-0 group-hover:opacity-100 transition-opacity"></span>
                                     Performance Support
                                 </li>
+                                <li class="text-gray-600 flex items-center group">
+                                    <span class="w-1.5 h-1.5 bg-rose rounded-full mr-3 opacity-0 group-hover:opacity-100 transition-opacity"></span>
+                                    Strategic Workshop & Conference Planning
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -1262,7 +1266,7 @@
                     <div class="bg-white p-8 rounded-xl border border-stone shadow-sm hover:shadow-md transition-shadow relative lg:col-span-2">
                         <i data-lucide="quote" class="absolute top-6 right-6 w-8 h-8 text-teal/10"></i>
                         <p class="text-gray-600 italic mb-6 leading-relaxed text-sm">
-                            "Leila and her team worked with USAID and TRG's LTS team to design an elaborate interactive, immersive tabletop exercise, that was expertly executed...Both of these sessions were the highest rated sessions for the entire workshop."
+                            "Leila worked with USAID and TRG's LTS team to design an elaborate interactive, immersive tabletop exercise, that was expertly executed...Both of these sessions were the highest rated sessions for the entire workshop."
                         </p>
                         <div>
                             <p class="font-bold text-navy text-sm">Facilitation & Training Lead, TRG</p>
