--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
     <header class="fixed w-full top-0 z-50 bg-[#F9F9F7]/95 backdrop-blur-sm border-b border-stone">
         <div class="max-w-screen-2xl mx-auto px-6 h-24 flex justify-between items-center">
             <!-- Logo Area -->
-            <a href="#" onclick="showPage('home')" class="hover:opacity-80 transition-opacity flex items-center gap-3">
-                <!-- UPDATED: Now looking for logo.jpg instead of logo.png -->
+            <a href="#" onclick="showPage('home')" class="hover:opacity-80 transition-opacity flex items-center">
                 <img src="images/logo.jpg" alt="CoCrea8 Logo" class="h-20 w-auto"> 
             </a>
 
@@ -202,7 +201,7 @@
                         <img src="images/about-hero.jpg" class="absolute inset-0 w-full h-full object-cover z-0" alt="Strategic Planning" onerror="this.style.opacity='0'">
                         <div class="absolute inset-0 bg-navy/60 z-10"></div> <!-- Dark overlay for text readability -->
                         <div class="relative z-10 text-center">
-                            <i data-lucide="anchor" class="w-16 h-16 text-white mx-auto mb-6 opacity-80"></i>
+                            <!-- Removed Anchor Icon -->
                             <p class="font-serif text-3xl text-white italic leading-snug">"Operational readiness isn't just a metric.<br>It's the mission."</p>
                         </div>
                     </div>
@@ -627,7 +626,7 @@
                     </div>
                     
                     <!-- CAPABILITIES INTRO IMAGE -->
-                    <div class="relative h-[300px] w-full rounded-lg overflow-hidden border-2 border-red-500 border-dashed bg-red-50 flex items-center justify-center">
+                    <div class="relative h-[300px] w-full rounded-lg overflow-hidden flex items-center justify-center">
                         <img src="images/capabilities-intro.jpg" alt="Capabilities in Action" class="absolute inset-0 w-full h-full object-cover" onerror="this.style.opacity='0'">
                     </div>
                 </div>
@@ -1194,7 +1193,7 @@
                         </div>
                         
                         <!-- TESTIMONIALS ATMOSPHERE IMAGE -->
-                        <div class="relative h-[250px] w-full rounded-lg overflow-hidden border-2 border-red-500 border-dashed bg-red-50 flex items-center justify-center">
+                        <div class="relative h-[250px] w-full rounded-lg overflow-hidden flex items-center justify-center">
                             <img src="images/testimonials-hero.jpg" alt="Collaboration" class="absolute inset-0 w-full h-full object-cover" onerror="this.style.opacity='0'">
                         </div>
                     </div>
@@ -1266,7 +1265,7 @@
                     <div class="bg-white p-8 rounded-xl border border-stone shadow-sm hover:shadow-md transition-shadow relative lg:col-span-2">
                         <i data-lucide="quote" class="absolute top-6 right-6 w-8 h-8 text-teal/10"></i>
                         <p class="text-gray-600 italic mb-6 leading-relaxed text-sm">
-                            "Leila worked with USAID and TRG's LTS team to design an elaborate interactive, immersive tabletop exercise, that was expertly executed...Both of these sessions were the highest rated sessions for the entire workshop."
+                            "Leila and her team worked with USAID and TRG's LTS team to design an elaborate interactive, immersive tabletop exercise, that was expertly executed...Both of these sessions were the highest rated sessions for the entire workshop."
                         </p>
                         <div>
                             <p class="font-bold text-navy text-sm">Facilitation & Training Lead, TRG</p>
