--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
         <div class="max-w-screen-2xl mx-auto px-6 h-24 flex justify-between items-center">
             <!-- Logo Area -->
             <a href="#" onclick="showPage('home')" class="hover:opacity-80 transition-opacity flex items-center">
-                <img src="images/logo.jpg" alt="CoCrea8 Logo" class="h-20 w-auto"> 
+                <!-- UPDATED: Logo resized to h-12 to match previous text size, looking for logo.jpg -->
+                <img src="images/logo.jpg" alt="CoCrea8 Logo" class="h-12 w-auto"> 
             </a>
 
             <!-- Desktop Nav -->
@@ -201,7 +202,6 @@
                         <img src="images/about-hero.jpg" class="absolute inset-0 w-full h-full object-cover z-0" alt="Strategic Planning" onerror="this.style.opacity='0'">
                         <div class="absolute inset-0 bg-navy/60 z-10"></div> <!-- Dark overlay for text readability -->
                         <div class="relative z-10 text-center">
-                            <!-- Removed Anchor Icon -->
                             <p class="font-serif text-3xl text-white italic leading-snug">"Operational readiness isn't just a metric.<br>It's the mission."</p>
                         </div>
                     </div>
@@ -215,11 +215,6 @@
                         <p class="text-gray-600 text-lg">We don't just organize content; we organize learning experiences based on how adult brains encode information under pressure. Our process is validated across DoD, USAID, and State Department programs.</p>
                     </div>
 
-                    <!-- NEW: TRANSFORMATION VISUAL PLACEHOLDER -->
-                    <div class="mb-20 rounded-lg overflow-hidden border-2 border-dashed border-stone bg-offwhite flex items-center justify-center p-8 relative z-10">
-                        <img src="images/methodology-transformation.jpg" alt="Transformation from Complexity to Capability" class="w-full max-w-4xl h-auto relative z-10" onerror="this.style.opacity='0'">
-                    </div>
-                    
                     <!-- PROCESS FLOW DESIGN -->
                     <div class="relative">
                         <!-- Connecting Line (Desktop Only) -->
@@ -397,7 +392,7 @@
                         <div class="md:col-span-4">
                             <h3 class="font-serif text-3xl text-navy mb-4">Who We Are</h3>
                             <p class="text-gray-600 leading-relaxed">
-                                CoCrea8 Learning Design is a woman-owned small business specializing in training that performs under operational pressure. We're specialists who solve the hardest learning challenges: building judgment rather than procedures.
+                                CoCrea8 Learning Design is a woman-owned small business specializing in training that performs under operational pressure. We exist to solve the hardest learning challenges—building critical judgment rather than just teaching procedures.
                             </p>
                         </div>
                         <div class="md:col-span-8 bg-white border border-stone p-8 rounded-xl shadow-sm">
@@ -410,7 +405,7 @@
                                     <h4 class="font-serif text-2xl text-navy mb-1">Leila M. Harriss, MPhil</h4>
                                     <p class="text-teal font-medium text-sm uppercase tracking-wide mb-4">Founder & CEO | U.S. Navy Reserve Officer</p>
                                     <p class="text-gray-600 mb-6">
-                                        Active U.S. Navy Reserve officer with 15+ years designing learning systems for DoD, USAID, and State Dept. Credentials include an MPhil in Theoretical and Applied Linguistics from Cambridge. But the real measure isn't credentials—it's results.
+                                        Learning Strategist and Navy Reserve officer with 15+ years of experience designing learning systems for the DoD, USAID and US State Dept. Credentials include a MPhil in Theoretical and Applied Linguistics, University of Cambridge and a B.Sc. in Cognitive Psychology, Florida State University. But the real measure isn't credentials—it's results.
                                     </p>
 
                                     <!-- NEW: RESULTS MINI-GRID -->
@@ -452,7 +447,7 @@
                                 CoCrea8 maintains a curated group of specialized contractors who collaborate on projects—think of it as having a bench of top-tier talent strategically deployed for your specific needs, without the fixed overhead costs of maintaining full-time staff.
                             </p>
                             <p class="text-gray-300 text-sm mb-6 leading-relaxed">
-                                Our core network members have collaborated across 15+ major projects over 5+ years, so we know each other's work intimately. When you need animation, technical illustration, audio production, or specialized development, we bring in the exact expertise required—not generalists trying to do everything.
+                                Our core network members have collaborated across 15+ major projects over 5+ years, so we know each other's work intimately. When you need animation, technical illustration, audio production, or specialized development, we bring in the exact expertise required.
                             </p>
                             <div class="flex flex-col gap-3">
                                 <div class="flex items-center gap-3">
@@ -592,7 +587,7 @@
                             <div class="text-center md:text-left md:pl-4">
                                 <h4 class="text-xs font-bold text-teal uppercase tracking-widest mb-4">Community Impact</h4>
                                 <p class="text-gray-600 leading-relaxed mb-8 max-w-md mx-auto md:mx-0">
-                                    Beyond our contracts, we are committed to a community-driven approach. We believe a rising tide raises all ships, and we actively contribute insights to strengthen the broader defense and development ecosystem.
+                                    Our commitment extends beyond the contract. We actively engage with and support the broader Contracting and Learning & Development communities, contributing insights and fostering partnership. We believe in shared success—by elevating the ecosystem together, we prove that a rising tide truly raises all ships.
                                 </p>
                                 <a href="#contact" onclick="showPage('contact')" class="inline-flex items-center gap-2 px-8 py-3 bg-teal text-white font-bold rounded-full hover:bg-navy transition-colors shadow-lg">
                                     Start the Conversation 
