--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
     <header class="fixed w-full top-0 z-50 bg-[#F9F9F7]/95 backdrop-blur-sm border-b border-stone">
         <div class="max-w-screen-2xl mx-auto px-6 h-24 flex justify-between items-center">
             <!-- Logo Area -->
-            <a href="#" onclick="showPage('home')" class="hover:opacity-80 transition-opacity flex items-center">
-                <!-- UPDATED: Logo resized to h-12 to match previous text size, looking for logo.jpg -->
+            <a href="#" onclick="showPage('home')" class="hover:opacity-80 transition-opacity flex items-center gap-3">
                 <img src="images/logo.jpg" alt="CoCrea8 Logo" class="h-12 w-auto"> 
             </a>
 
@@ -215,6 +214,11 @@
                         <p class="text-gray-600 text-lg">We don't just organize content; we organize learning experiences based on how adult brains encode information under pressure. Our process is validated across DoD, USAID, and State Department programs.</p>
                     </div>
 
+                    <!-- NEW: TRANSFORMATION VISUAL PLACEHOLDER -->
+                    <div class="mb-20 rounded-lg overflow-hidden border-2 border-dashed border-stone bg-offwhite flex items-center justify-center p-8 relative z-10">
+                        <img src="images/methodology-transformation.jpg" alt="Transformation from Complexity to Capability" class="w-full max-w-4xl h-auto relative z-10" onerror="this.style.opacity='0'">
+                    </div>
+                    
                     <!-- PROCESS FLOW DESIGN -->
                     <div class="relative">
                         <!-- Connecting Line (Desktop Only) -->
