--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         <img src="images/about-hero.jpg" class="absolute inset-0 w-full h-full object-cover z-0" alt="Strategic Planning" onerror="this.style.opacity='0'">
                         <div class="absolute inset-0 bg-navy/60 z-10"></div> <!-- Dark overlay for text readability -->
                         <div class="relative z-10 text-center">
-                            <!-- Removed anchor icon, centered text -->
+                            <!-- REMOVED ANCHOR ICON & CENTERED TEXT -->
                             <p class="font-serif text-3xl text-white italic leading-snug">"Operational readiness isn't just a metric.<br>It's the mission."</p>
                         </div>
                     </div>
@@ -628,7 +628,7 @@
                     </div>
                     
                     <!-- CAPABILITIES INTRO IMAGE -->
-                    <!-- Removed border-2 border-red-500 border-dashed bg-red-50 -->
+                    <!-- Removed border and red styling to make it clean -->
                     <div class="relative h-[300px] w-full rounded-lg overflow-hidden flex items-center justify-center">
                         <img src="images/capabilities-intro.jpg" alt="Capabilities in Action" class="absolute inset-0 w-full h-full object-cover" onerror="this.style.opacity='0'">
                     </div>
@@ -1196,6 +1196,7 @@
                         </div>
                         
                         <!-- TESTIMONIALS ATMOSPHERE IMAGE -->
+                        <!-- Removed border-2 border-red-500 border-dashed bg-red-50 -->
                         <div class="relative h-[250px] w-full rounded-lg overflow-hidden flex items-center justify-center">
                             <img src="images/testimonials-hero.jpg" alt="Collaboration" class="absolute inset-0 w-full h-full object-cover" onerror="this.style.opacity='0'">
                         </div>
@@ -1307,6 +1308,11 @@
                             Read Full Article <i data-lucide="arrow-up-right" class="ml-2 w-4 h-4"></i>
                         </a>
                     </article>
+                    <!-- SUGGESTED IMAGE 5: INSIGHTS THUMBNAIL -->
+                    <!-- Removed border-2 border-dashed border-red-500 bg-red-50 -->
+                    <div class="mt-6 p-6 rounded-lg text-center">
+                        <img src="images/insights-thumbnail.jpg" alt="Insights Thumbnail" class="w-full h-full object-cover rounded-lg" onerror="this.style.opacity='0'">
+                    </div>
                 </div>
             </div>
         </section>
