--- a/index.html
+++ b/index.html
@@ -116,21 +116,20 @@
                 <i data-lucide="menu" class="w-6 h-6"></i>
             </button>
         </div>
-
-        <!-- Mobile Menu Overlay -->
-        <!-- FIX: Added 'bg-white' to ensure opacity and prevent transparency issues -->
-        <div id="mobile-menu" class="fixed inset-0 bg-white z-50 hidden flex-col justify-center items-center space-y-8 text-xl font-serif">
-            <button class="absolute top-8 right-8" onclick="toggleMobileMenu()">
-                <i data-lucide="x" class="w-8 h-8"></i>
-            </button>
-            <button onclick="showPage('about'); toggleMobileMenu()">About</button>
-            <button onclick="showPage('capabilities'); toggleMobileMenu()">Capabilities</button>
-            <button onclick="showPage('work'); toggleMobileMenu()">Work</button>
-            <button onclick="showPage('testimonials'); toggleMobileMenu()">Testimonials</button>
-            <button onclick="showPage('insights'); toggleMobileMenu()">Insights</button>
-            <button onclick="showPage('contact'); toggleMobileMenu()">Contact</button>
-        </div>
     </header>
+
+    <!-- Mobile Menu Overlay (Moved Outside Header to Fix Stacking/Opacity Issues) -->
+    <div id="mobile-menu" class="fixed inset-0 bg-white z-[60] hidden flex-col justify-center items-center space-y-8 text-xl font-serif">
+        <button class="absolute top-8 right-8 p-2" onclick="toggleMobileMenu()">
+            <i data-lucide="x" class="w-8 h-8 text-charcoal"></i>
+        </button>
+        <button onclick="showPage('about'); toggleMobileMenu()">About</button>
+        <button onclick="showPage('capabilities'); toggleMobileMenu()">Capabilities</button>
+        <button onclick="showPage('work'); toggleMobileMenu()">Work</button>
+        <button onclick="showPage('testimonials'); toggleMobileMenu()">Testimonials</button>
+        <button onclick="showPage('insights'); toggleMobileMenu()">Insights</button>
+        <button onclick="showPage('contact'); toggleMobileMenu()">Contact</button>
+    </div>
 
     <!-- Main Content Area -->
     <main class="flex-grow pt-24 min-h-screen">
