--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
         <div class="max-w-screen-2xl mx-auto px-6 h-24 flex justify-between items-center">
             <!-- Logo Area -->
             <a href="#" onclick="showPage('home')" class="hover:opacity-80 transition-opacity flex items-center gap-3">
-                <!-- UPDATED: Logo resized to h-20 (bigger) -->
                 <img src="images/logo.jpg" alt="CoCrea8 Logo" class="h-20 w-auto"> 
             </a>
 
@@ -308,7 +307,7 @@
                                 <h3 class="font-serif text-2xl font-bold">The Linguistics Advantage</h3>
                             </div>
                             <p class="text-teal-100 mb-8 leading-relaxed">
-                                Most training fails because traditional content principles don't account for how adults actually acquire complex systems. We use a <strong>content-agnostic methodology</strong> that applies the sophisticated cognitive science of <strong>language acquisition</strong> to any technical domain.
+                                Most training fails because traditional content principles overlook how adults actually learn complex systems. We solve this by applying the cognitive science of <strong>language acquisition</strong>—our content-agnostic methodology—to technical domains, accelerating the path to rapid, effective mastery.
                             </p>
                             
                             <div class="space-y-6">
@@ -1308,11 +1307,6 @@
                             Read Full Article <i data-lucide="arrow-up-right" class="ml-2 w-4 h-4"></i>
                         </a>
                     </article>
-                    <!-- SUGGESTED IMAGE 5: INSIGHTS THUMBNAIL -->
-                    <!-- Removed border-2 border-dashed border-red-500 bg-red-50 -->
-                    <div class="mt-6 p-6 rounded-lg text-center">
-                        <img src="images/insights-thumbnail.jpg" alt="Insights Thumbnail" class="w-full h-full object-cover rounded-lg" onerror="this.style.opacity='0'">
-                    </div>
                 </div>
             </div>
         </section>
